# load-test

./: .gitignore  Cargo.toml  README.md  body.json  openapi.json
src/: client.rs  connection.rs  constants.rs  error.rs  header.rs  lib.rs  load_test_request.rs  main.rs  request.rs  response_reader.rs  tests.rs  utils.rs
test_data/request/: example.yml
test_resources/: chunked_response.txt
